--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,47 @@ before_install:
 
 env:
   matrix:
-   - JOB=ONE
-   - JOB=TWO
-
+  - JOB=JOB-1
+  - JOB=JOB-2
+  - JOB=JOB-3
+  - JOB=JOB-4
+  - JOB=JOB-5
+  - JOB=JOB-6
+  - JOB=JOB-7
+  - JOB=JOB-8
+  - JOB=JOB-9
+  - JOB=JOB-10
+  - JOB=JOB-11
+  - JOB=JOB-12
+  - JOB=JOB-13
+  - JOB=JOB-14
+  - JOB=JOB-15
+  - JOB=JOB-16
+  - JOB=JOB-17
+  - JOB=JOB-18
+  - JOB=JOB-19
+  - JOB=JOB-20
+  - JOB=JOB-21
+  - JOB=JOB-22
+  - JOB=JOB-23
+  - JOB=JOB-24
+  - JOB=JOB-25
+  - JOB=JOB-26
+  - JOB=JOB-27
+  - JOB=JOB-28
+  - JOB=JOB-29
+  - JOB=JOB-30
+  - JOB=JOB-31
+  - JOB=JOB-32
+  - JOB=JOB-33
+  - JOB=JOB-34
+  - JOB=JOB-35
+  - JOB=JOB-36  
+  - JOB=JOB-37
+  - JOB=JOB-38
+  - JOB=JOB-39
+  - JOB=JOB-40
+  
 script:
   - printenv 
  
